
/**
 *
 * Copyright Â© INVE FOUNDATION. All rights reserved.
 *
 * @author: Francis.Deng[francis_xiiiv@163.com]
 * @version: V1.0
 * @Date: 1/2/20 7:22 PM
 * @Build: protoc --go_out=plugins=grpc:. common.proto
 * @Build: protoc --java_out=. common.proto
 */

syntax = "proto3";

option java_multiple_files = true;
option java_package = "one.inve.localfullnode2.chronicle.rpc";


package rpc;


message ByteStream{
    repeated bytes data = 1;
}

message StringArray{
    repeated string data = 1;
}